objects/Reschedule_History__c.object
<CustomObject>
    <description>Used to track the history of service appointments being rescheduled.</description>
    <fields>
        <fullName>Original_Scheduled_Start_Time__c</fullName>
        <description>The time that the original Service Appointment was scheduled to start.</description>
        <inlineHelpText>The time that the original Service Appointment was scheduled to start.</inlineHelpText>
        <label>Original Scheduled Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reason_for_Reschedule__c</fullName>
        <description>&quot;Cannot Complete Reason&quot; from the rescheduled Service Appointment.</description>
        <inlineHelpText>&quot;Cannot Complete Reason&quot; from the rescheduled Service Appointment.</inlineHelpText>
        <label>Reason for Reschedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reschedule__c</fullName>
        <description>The parent reschedule object used to connect all related Reschedule Histories.</description>
        <inlineHelpText>The parent reschedule object used to connect all related Reschedule Histories.</inlineHelpText>
        <label>Reschedule</label>
        <referenceTo>Reschedule__c</referenceTo>
        <relationshipLabel>Reschedule Histories</relationshipLabel>
        <relationshipName>Reschedule_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rescheduled_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who initiated the reschedule.</description>
        <inlineHelpText>The user who initiated the reschedule.</inlineHelpText>
        <label>Rescheduled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reschedule_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rescheduled_Datetime__c</fullName>
        <description>The date and time that this reschedule occurred.</description>
        <inlineHelpText>The date and time that this reschedule occurred.</inlineHelpText>
        <label>Rescheduled Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rescheduled_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The original service appointment that has been rescheduled.</description>
        <inlineHelpText>The original service appointment that has been rescheduled.</inlineHelpText>
        <label>Rescheduled From</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Reschedule Histories</relationshipLabel>
        <relationshipName>Reschedule_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rescheduled_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The new Service Appointment that resulted from the original being rescheduled.</description>
        <inlineHelpText>The new Service Appointment that resulted from the original being rescheduled.</inlineHelpText>
        <label>Rescheduled To</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Reschedule Histories (Rescheduled To)</relationshipLabel>
        <relationshipName>Reschedule_Histories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Service Resource who was assigned to the original service appointment.</description>
        <inlineHelpText>The Service Resource who was assigned to the original service appointment.</inlineHelpText>
        <label>Service Resource</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Reschedule Histories</relationshipLabel>
        <relationshipName>Reschedule_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Reschedule History</label>
    <nameField>
        <label>Reschedule History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reschedule Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>